# python-project-lvl1

./: README.md  pyproject.toml
.github/workflows/: github-actions-make-lint.yml
brain_games/: brain_main.py  cli.py  gcd_calc.py  prime_calc.py
brain_games/games/: brain_main.py  calc.py  even.py  find_even.py  find_gcd.py  find_prime.py  find_progression.py  find_result.py  gcd.py  prime.py  progression.py  result.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
