[tool.poetry]
name = "hexlet-code"
version = "0.4.0"
description = "My first project"
authors = ["YurGa777 <gray777@list.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
certifi = "^2020.12.5"
chardet = "^4.0.0"
idna = "^2.10"
requests = "^2.25.1"
urllib3 = "^1.26.4"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prog = "brain_games.scripts.brain_progression:main"
